# flask-expected-value

./: .coverage  .gitignore  app.py  makepwhash.py  mypy.ini  pyproject.toml  requirements.txt
expected/: __init__.py  agnes4.py  auth.py  imarin_.py  imarine.py
expected/static/: style.css
expected/templates/: base.html  index.html  login.html  page_agnes4.html  page_imarine.html
expected/visualize/: agnes4.py  imarine.py  models.py  spreadsheet.py  spreadsheet_.py  utime.py
expected_value/: __init__.py  agnes4.py  imarin_.py  imarine.py
expected_value/static/: style.css
expected_value/templates/: base.html  index.html  page_agnes4.html  page_imarine.html
expected_value/visualize/: agnes4.py  calc_rate.py  gspreadsheet.py  imarine.py  models.py  r3.py  spreadsheet.py  spreadsheet_.py
tests/: conftest.py  make_csv.py  test_factory.py
tests/visualize/: imarine.csv  test_gsp.py  test_gspreadsheet.py  test_imarine.py  test_spreadsheet.py
